# secureskat

./: BUGS  ChangeLog  Makefile.am  README  SecureSkat.cc  SecureSkat_ai.cc  SecureSkat_ballot.inc  SecureSkat_defs.hh  SecureSkat_game.cc  SecureSkat_game.hh  SecureSkat_irc.cc  SecureSkat_irc.hh  SecureSkat_misc.cc  SecureSkat_misc.hh  SecureSkat_pki.cc  SecureSkat_pki.hh  SecureSkat_random.cc  SecureSkat_rnk.cc  SecureSkat_rnk.hh  SecureSkat_rule.cc  SecureSkat_rule.hh  SecureSkat_skat.cc  SecureSkat_skat.hh  SecureSkat_vote.cc  SecureSkat_vote.hh  SecureSkat_vtmf.cc  SecureSkat_vtmf.hh  THANKS  TODO  acinclude.m4  configure.ac  mkinstalldirs  pipestream.hh  securesocketstream.hh  socketstream.hh
libTMCG/: BarnettSmartVTMF_dlog.cc  BarnettSmartVTMF_dlog.hh  Makefile.am  SchindelhauerTMCG.cc  SchindelhauerTMCG.hh  TMCG.def  TMCG_Card.cc  TMCG_Card.hh  TMCG_CardSecret.cc  TMCG_CardSecret.hh  TMCG_OpenStack.cc  TMCG_OpenStack.hh  TMCG_PublicKey.cc  TMCG_PublicKey.hh  TMCG_PublicKeyRing.hh  TMCG_SecretKey.cc  TMCG_SecretKey.hh  TMCG_Stack.cc  TMCG_Stack.hh  TMCG_StackSecret.cc  TMCG_StackSecret.hh  VTMF_Card.cc  VTMF_Card.hh  VTMF_CardSecret.cc  VTMF_CardSecret.hh  libTMCG.hh  mpz_helper.cc  mpz_helper.hh  mpz_primes.h  mpz_shash.cc  mpz_shash.h  mpz_shash.hh  mpz_spowm.c  mpz_spowm.h  mpz_sprime.c  mpz_sprime.h  mpz_sqrtm.c  mpz_sqrtm.h  mpz_srandom.c  mpz_srandom.h  (+2 more)
po/: ChangeLog  Makevars  POTFILES.in  de.po
